HBase Change Log

Release 0.18.0 
  Initial Release - Compatible with hadoop-0.18.0, hbase-0.18.0 & heritrix 2.0.1
  
 